# ExoMDN

./: README.md  migration.md  pyproject.toml
.github/workflows/: ci.yml
models/mass_radius_Teq/: model.keras  preprocessor.json
models/mass_radius_k2_Teq/: preprocessor.json
more_examples/: model_training_demo.ipynb
src/exomdn/: mdn_model.py
tests/: conftest.py  test_model.py  test_plotting.py
